Fix for my A11y Homies, fix the contrast of Twitter

--- a/atomic-scss/atoms/atom-socialslist.scss
+++ b/atomic-scss/atoms/atom-socialslist.scss
@@ -41,7 +41,15 @@
     } // .sociallist__item
 
     .sociallist__item--twitter {
-        background-color: #1DA1F2;
+        background-color: #fff;
+        
+        a {
+            color: #333;
+        }
+
+        svg {
+            color: #1DA1F2;
+        }
     }
 
     .sociallist__item--linkedin {
